Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98582

QT Bluetooth LE crashed when connect/disconnect to a device

XMLWordPrintable

    • Windows
    • 13
    • 6b910367d8 (qt/qtconnectivity/dev) 95aea43ff6 (qt/qtconnectivity/6.2) 14157a1de8 (qt/qtconnectivity/6.3) 95aea43ff6 (qt/tqtc-qtconnectivity/6.2) 14157a1de8 (qt/tqtc-qtconnectivity/6.3) d8473c74e1 (qt/tqtc-qtconnectivity/5.15)
    • Team 1 Foundation_Sprint 48

      this task is continuing from task: https://bugreports.qt.io/browse/QTBUG-96057 and https://bugreports.qt.io/browse/QTBUG-97578

      OS: Windows 10. and more often on Windows 11.

      When: random. but often on steps connect/disconnect/scan device info.

      Big issue: sometime, crash happened while device connected already and streaming data.

      Case 1:

      Case 2:

      ~QWinRTLowEnergyConnectionHandler()
          {
              qCDebug(QT_BT_WINRT) << __FUNCTION__;
              // To close the COM library gracefully, each successful call to
              // CoInitialize, including those that return S_FALSE, must be balanced
              // by a corresponding call to CoUninitialize.
              if (mInitialized == S_OK || mInitialized == S_FALSE)
                  CoUninitialize();
          }
      

      seem, it crashed after call: CoUninitialize().

      cc ivan.solovev , andreasbuhr

        1. Screen Shot 2021-10-18 at 15.23.35.png
          234 kB
          Hoang Pham
        2. AppCrashLog.txt
          1 kB
          Hoang Pham
        3. Disconnect_Crash.png
          162 kB
          Hoang Pham
        4. Crash_5.15.7_withHangFixed.txt
          22 kB
          Hoang Pham
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            hoangpham Hoang Pham
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: