QLowEnergyController Windows: fix early disconnect crash on Win 11

QLowEnergyController connection helper object was calling CoInitialize()
in connectToDevice() and CoUninitialize() in its destructor.
This was working fine on Windows 10, but on Windows 11, in case when
the connection attempt is interrupted by a disconnect request, it was
crashing.
The stack trace showed that Windows 11 is trying to do more COM-related
calls after CoUninitialize() is called. Specifically, it was calling
CoIncrementMTAUsage(), and some others.

This patch replaces CoInitialize(), which uses a single-threaded
apartment model, to CoInitializeEx(NULL, COINIT_MULTITHREADED) that
uses multi-threaded apartment. It also explicitly clears the
ComPtr-based class members before calling CoUninitialize().

These two measures help to prevent the crashes. Although I do not
completely understand why it helps.

Fixes: QTBUG-98582
Change-Id: I6fe5a877dbc2c0518ba97fddb132c2f87fc397c2
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 6b910367d859504a0bb48b82e6a2400f76e35241)
Reviewed-by: Juha Vuolle <juha.vuolle@insta.fi>